--- a/src/templates/country-list.hbs
+++ b/src/templates/country-list.hbs
@@ -1,5 +1,8 @@
 <ul class='country-list'>
   {{#each this}}
-    <li class='country-list__item'>{{name.common}}</li>
+    <li class='country-list__item'><a
+        href=''
+        class='country-list__link'
+      >{{name.common}}</a></li>
   {{/each}}
 </ul>
